@startuml

title __QUESTİON's Class Diagram__\n

  namespace question {
    class question.HashTableHybrid {
        - DELETED : Entry<K, V>
        - LOAD_THRESHOLD : double
        {static} - START_CAPACITY : int
        - numDeletes : int
        - numKeys : int
        - table : Entry<K, V>[]
        + HashTableHybrid()
        + get()
        + isEmpty()
        + put()
        + remove()
        + size()
        - find()
        - rehash()
    }
  }
  

  namespace question {
    class question.HashTableHybrid.Entry {
        + Entry()
        + getKey()
        + getValue()
        + setValue()
    }
  }
  

  namespace question {
    interface question.KWHashMap {
        {abstract} + get()
        {abstract} + isEmpty()
        {abstract} + put()
        {abstract} + remove()
        {abstract} + size()
    }
  }
  

  namespace question {
    class question.Main {
        {static} ~ micro2nano : double
        {static} + fillRandomTable()
        {static} + get_selection()
        {static} + main()
        {static} + testQ1()
        {static} + testQ2()
    }
  }
  

  namespace question {
    class question.Q2 {
        - random : Random
        + Q2()
        + fillRandomArray()
        + findMinMax()
        + mergeSort()
        + newSort()
        + printArray()
        + quickSort()
        - maxIndex()
        - merge()
        - minIndex()
        - partition()
        - rNewSort()
        - rQuickSort()
        - swap()
    }
  }
  

  question.HashTableHybrid .up.|> question.KWHashMap
  question.HashTableHybrid +-down- question.HashTableHybrid.Entry
  question.HashTableHybrid.Entry o-- K : key
  question.HashTableHybrid.Entry o-- V : value


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
